--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,4 @@ POKERSTARS_PASSWORD = 'wf489g^djkggs2'
 POKERSTARS_WEBSITE = 'https://www.pokerstarsmi.com'
 POKERSTARS_FQDN = 'pokerstarsmi.com'
 DEV_PIN = 0
+LOG_LEVEL = OFF
